# wiptools-wip

./: .bumpversion.cfg  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  wip-cookiecutter.json
docs/: api-reference.md  index.md
tests/wiptools/wip/: helpers.py  test_helpers.py  test_wip.py  test_wip_env.py  test_wip_init.py
tests/wiptools_wip/: test_wiptools_wip.py
wiptools/: __init__.py  messages.py  utils.py
wiptools/cookiecutters/module-cpp/{{cookiecutter.module_name}}/: CMakeLists.txt
wiptools/wip/: __main__.py  wip_add.py  wip_build.py  wip_docs.py  wip_info.py  wip_init.py
wiptools_wip/: __init__.py
